[package]
name = "tower-defense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", features = ["dynamic"] }
bevy_flycam = { version = "0.6.0" }
bevy_rapier3d = { version = "0.12.1" }
bevy-inspector-egui = { version = "0.9" }