[package]
name = "tower-defense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_flycam = { version = "0.7.0" }
bevy_rapier3d = { version = "0.13.2", features = ["debug-render"] }
bevy-inspector-egui = { version = "0.11" }
bevy-inspector-egui-rapier = { version = "0.3", features = ["rapier3d"] }
rand = "0.8"